ash/mus: Fix a crash during tear down.

WindowManagerObserver can operate on the WMShell instance when the
WindowTreeClient is destroyed (e.g. AcceleratorRegistrarImpl). So
notify the observers before destroying the WMShell instance.

BUG=639039

Review-Url: https://codereview.chromium.org/2269473003
Cr-Commit-Position: refs/heads/master@{#413453}

Former-commit-id: 6d9ba42aa4635a02ddc20e9d155a055c76c510e5